--- a/_includes/swc/syllabus.html
+++ b/_includes/swc/syllabus.html
@@ -68,7 +68,7 @@
     </ul>
   </div>
   <div class="col-md-6">
-    <h3 id="syllabus-sql">Managing Data with SQL</h3>
+<!--     <h3 id="syllabus-sql">Managing Data with SQL</h3>
     <ul>
       <li>Reading and Sorting Data</li>
       <li>Filtering with <code>where</code></li>
@@ -80,7 +80,7 @@
       <li>Programming with Databases</li>
       <li><a href="{{site.swc_pages}}/sql-novice-survey/reference">Reference...</a></li>
     </ul>
-  </div>
+ -->  </div>
     <!--
   <div class="col-md-6">
     <h3 id="syllabus-r">Open Refine</h3>
